<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_parties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:text="@string/tw_past_parties" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_parties"
        android:drawableLeft="@drawable/ic_search"
        android:text="@string/btn_search" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_search"
        android:drawableLeft="@drawable/ic_add"
        android:text="@string/btn_add" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_add"
        android:drawableLeft="@drawable/ic_history"
        android:text="@string/btn_history" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_history"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" >
    </ListView>

    <TextView
        android:id="@+id/tv_registrered_parties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_parties"
        android:layout_below="@+id/btn_history"
        android:text="@string/tw_registered_events" />

</RelativeLayout>