<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_news"
        style="@style/btn_large_black"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_public_events"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_news"
        android:text="@string/btn_news" />

    <Button
        android:id="@+id/btn_public_events"
        style="@style/btn_large_black"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_private_party"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_event"
        android:text="@string/btn_publicevent" />

    <Button
        android:id="@+id/btn_private_party"
        style="@style/btn_large_black"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_party"
        android:text="@string/btn_privateparty" />

    <Button
        android:id="@+id/btn_profil_settings"
        style="@style/btn_large_black"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_news"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/btn_profil_settings" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp" >
    </ListView>

    <TextView
        android:id="@+id/tw_events"
        style="@style/btn_large_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView1"
        android:layout_alignParentLeft="true"
        android:text="@string/tw_registered_events" />

</RelativeLayout>